# nebula-os

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  rust-toolchain.toml
fonts/ajn-tanmatsuki/: license.txt  readme.txt
nebula_core/: Cargo.toml
nebula_core/src/: buffer.rs  lib.rs
nebula_uefi_graphics/: Cargo.toml
nebula_uefi_graphics/src/: lib.rs
nebula_uefi_graphics/src/screen/: mod.rs
nebuload/: Cargo.toml
nebuload/src/: buffer.rs  font_render.rs  fs.rs  main.rs  utils.rs
src/: main.rs
